# pith

./: CLAUDE.md  Cargo.toml  DESIGN.md  README.md  TODO.md
crates/backends/mock/pith-clocks-mock/: Cargo.toml
crates/backends/mock/pith-http-mock/: Cargo.toml
crates/backends/mock/pith-random-mock/: Cargo.toml
crates/backends/mock/portals-clocks-mock/: Cargo.toml
crates/backends/mock/portals-clocks-mock/src/: lib.rs
crates/backends/mock/portals-http-mock/: Cargo.toml
crates/backends/mock/portals-http-mock/src/: lib.rs
crates/backends/mock/portals-random-mock/: Cargo.toml
crates/backends/mock/portals-random-mock/src/: lib.rs
crates/backends/native/pith-blobstore-native/: Cargo.toml
crates/backends/native/pith-blobstore-native/src/: lib.rs
crates/backends/native/pith-cache-native/: Cargo.toml
crates/backends/native/pith-cli-native/: Cargo.toml
crates/backends/native/pith-clocks-native/: Cargo.toml
crates/backends/native/pith-clocks-native/src/: lib.rs
crates/backends/native/pith-encoding-native/: Cargo.toml
crates/backends/native/pith-encoding-native/src/: lib.rs
crates/backends/native/pith-filesystem-native/: Cargo.toml
crates/backends/native/pith-filesystem-native/src/: lib.rs
crates/backends/native/pith-http-native/: Cargo.toml
crates/backends/native/pith-http-native/src/: lib.rs
crates/backends/native/pith-io-native/: Cargo.toml
crates/backends/native/pith-io-native/src/: lib.rs
crates/backends/native/pith-keyvalue-native/: Cargo.toml
crates/backends/native/pith-keyvalue-native/src/: lib.rs
crates/backends/native/pith-logging-native/: Cargo.toml
crates/backends/native/pith-logging-native/src/: lib.rs
crates/backends/native/pith-markdown-native/: Cargo.toml
crates/backends/native/pith-markdown-native/src/: lib.rs
crates/backends/native/pith-messaging-native/: Cargo.toml
crates/backends/native/pith-messaging-native/src/: lib.rs
crates/backends/native/pith-sockets-native/: Cargo.toml
crates/backends/native/pith-sockets-native/src/: lib.rs
crates/backends/native/pith-sql-native/: Cargo.toml
crates/backends/native/pith-sql-native/src/: lib.rs
crates/backends/native/pith-uuid-native/: Cargo.toml
crates/backends/native/pith-uuid-native/src/: lib.rs
crates/backends/native/pith-websocket-native/: Cargo.toml
crates/backends/native/pith-websocket-native/src/: lib.rs
crates/backends/native/portals-blobstore-native/: Cargo.toml
crates/backends/native/portals-blobstore-native/src/: lib.rs
crates/backends/native/portals-clocks-native/: Cargo.toml
crates/backends/native/portals-clocks-native/src/: lib.rs
crates/backends/native/portals-crypto-native/: Cargo.toml
crates/backends/native/portals-crypto-native/src/: lib.rs
crates/backends/native/portals-dns-native/: Cargo.toml
crates/backends/native/portals-dns-native/src/: lib.rs
crates/backends/native/portals-filesystem-native/: Cargo.toml
crates/backends/native/portals-filesystem-native/src/: lib.rs
crates/backends/native/portals-http-native/: Cargo.toml
crates/backends/native/portals-http-native/src/: lib.rs
crates/backends/native/portals-io-native/: Cargo.toml
crates/backends/native/portals-io-native/src/: lib.rs
crates/backends/native/portals-keyvalue-native/: Cargo.toml
crates/backends/native/portals-keyvalue-native/src/: lib.rs
crates/backends/native/portals-logging-native/: Cargo.toml
crates/backends/native/portals-logging-native/src/: lib.rs
crates/backends/native/portals-markdown-native/: Cargo.toml
crates/backends/native/portals-markdown-native/src/: lib.rs
crates/backends/native/portals-messaging-native/: Cargo.toml
crates/backends/native/portals-messaging-native/src/: lib.rs
crates/interfaces/pith-blobstore/: Cargo.toml
crates/interfaces/pith-cache/: Cargo.toml
crates/interfaces/pith-clocks/: Cargo.toml
crates/interfaces/pith-config/: Cargo.toml
crates/interfaces/pith-crypto/: Cargo.toml
crates/interfaces/pith-dns/: Cargo.toml
crates/interfaces/pith-encoding/: Cargo.toml
crates/interfaces/pith-filesystem/: Cargo.toml
crates/interfaces/pith-http/: Cargo.toml
crates/interfaces/pith-io/: Cargo.toml
crates/interfaces/pith-keyvalue/: Cargo.toml
crates/interfaces/pith-logging/: Cargo.toml
crates/interfaces/pith-markdown/: Cargo.toml
crates/interfaces/pith-messaging/: Cargo.toml
crates/interfaces/pith-observe/: Cargo.toml
crates/interfaces/pith-snowflake/: Cargo.toml
crates/interfaces/pith-sql/: Cargo.toml
crates/interfaces/pith-timezone/: Cargo.toml
crates/interfaces/pith-url/: Cargo.toml
crates/interfaces/pith-uuid/: Cargo.toml
crates/interfaces/pith-websocket/: Cargo.toml
crates/interfaces/portals-blobstore/: Cargo.toml
crates/interfaces/portals-cache/: Cargo.toml
crates/interfaces/portals-clocks/: Cargo.toml
crates/interfaces/portals-config/: Cargo.toml
crates/interfaces/portals-cron/: Cargo.toml
crates/interfaces/portals-crypto/: Cargo.toml
crates/interfaces/portals-dns/: Cargo.toml
crates/interfaces/portals-encoding/: Cargo.toml
crates/interfaces/portals-filesystem/: Cargo.toml
crates/interfaces/portals-http/: Cargo.toml
crates/interfaces/portals-io/: Cargo.toml
crates/interfaces/portals-keyvalue/: Cargo.toml
crates/interfaces/portals-logging/: Cargo.toml
crates/interfaces/portals-markdown/: Cargo.toml
crates/interfaces/portals-messaging/: Cargo.toml
crates/interfaces/portals-nanoid/: Cargo.toml
crates/interfaces/portals-observe/: Cargo.toml
crates/interfaces/portals-random/: Cargo.toml
crates/interfaces/portals-snowflake/: Cargo.toml
crates/interfaces/portals-sockets/: Cargo.toml
crates/interfaces/portals-sql/: Cargo.toml
crates/interfaces/portals-timezone/: Cargo.toml
crates/interfaces/portals-websocket/: Cargo.toml
crates/pith/src/: lib.rs
crates/portals/: Cargo.toml  README.md
crates/portals/src/: lib.rs
crates/protocols/pith-http1/: Cargo.toml
crates/protocols/portals-http1/: Cargo.toml
docs/: RECOMMENDATIONS.md  WASM.md
docs/adr/: 0002-async-runtime.md  0003-stdio-mutability.md  0004-capability-audit.md
(+106 files in other folders)
