[workspace]
resolver = "2"
members = [
    # Meta
    "crates/pith",
    # Interfaces
    "crates/interfaces/pith-blobstore",
    "crates/interfaces/pith-cache",
    "crates/interfaces/pith-clocks",
    "crates/interfaces/pith-config",
    "crates/interfaces/pith-cron",
    "crates/interfaces/pith-crypto",
    "crates/interfaces/pith-dns",
    "crates/interfaces/pith-encoding",
    "crates/interfaces/pith-filesystem",
    "crates/interfaces/pith-http",
    "crates/interfaces/pith-io",
    "crates/interfaces/pith-keyvalue",
    "crates/interfaces/pith-logging",
    "crates/interfaces/pith-markdown",
    "crates/interfaces/pith-messaging",
    "crates/interfaces/pith-nanoid",
    "crates/interfaces/pith-observe",
    "crates/interfaces/pith-random",
    "crates/interfaces/pith-snowflake",
    "crates/interfaces/pith-sockets",
    "crates/interfaces/pith-sql",
    "crates/interfaces/pith-timezone",
    "crates/interfaces/pith-websocket",
    # Native backends
    "crates/backends/native/pith-blobstore-native",
    "crates/backends/native/pith-cache-native",
    "crates/backends/native/pith-clocks-native",
    "crates/backends/native/pith-config-native",
    "crates/backends/native/pith-crypto-native",
    "crates/backends/native/pith-dns-native",
    "crates/backends/native/pith-filesystem-native",
    "crates/backends/native/pith-http-native",
    "crates/backends/native/pith-io-native",
    "crates/backends/native/pith-keyvalue-native",
    "crates/backends/native/pith-logging-native",
    "crates/backends/native/pith-markdown-native",
    "crates/backends/native/pith-messaging-native",
    "crates/backends/native/pith-nanoid-native",
    "crates/backends/native/pith-observe-native",
    "crates/backends/native/pith-random-native",
    "crates/backends/native/pith-snowflake-native",
    "crates/backends/native/pith-sockets-native",
    "crates/backends/native/pith-sql-native",
    "crates/backends/native/pith-websocket-native",
    # Mock backends
    "crates/backends/mock/pith-clocks-mock",
    "crates/backends/mock/pith-http-mock",
    "crates/backends/mock/pith-random-mock",
    # WASM backends
    "crates/backends/wasm/pith-clocks-wasm",
    "crates/backends/wasm/pith-http-wasm",
    "crates/backends/wasm/pith-logging-wasm",
    "crates/backends/wasm/pith-random-wasm",
    "crates/backends/wasm/pith-websocket-wasm",
    # Portable backends (work on native and WASM)
    "crates/backends/portable/pith-cron",
    "crates/backends/portable/pith-encoding",
    # Protocols
    "crates/protocols/pith-http1",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rhizome-lab/pith"

[workspace.dependencies]
tokio = { version = "1", features = ["time", "rt", "macros", "net", "io-util", "rt-multi-thread"] }
getrandom = "0.3"
libsql = "0.6"
