[workspace]
resolver = "2"
members = [
    # Meta
    "crates/portals",
    # Interfaces
    "crates/interfaces/portals-blobstore",
    "crates/interfaces/portals-cache",
    "crates/interfaces/portals-clocks",
    "crates/interfaces/portals-config",
    "crates/interfaces/portals-cron",
    "crates/interfaces/portals-crypto",
    "crates/interfaces/portals-dns",
    "crates/interfaces/portals-encoding",
    "crates/interfaces/portals-filesystem",
    "crates/interfaces/portals-http",
    "crates/interfaces/portals-io",
    "crates/interfaces/portals-keyvalue",
    "crates/interfaces/portals-logging",
    "crates/interfaces/portals-markdown",
    "crates/interfaces/portals-messaging",
    "crates/interfaces/portals-nanoid",
    "crates/interfaces/portals-observe",
    "crates/interfaces/portals-random",
    "crates/interfaces/portals-snowflake",
    "crates/interfaces/portals-sockets",
    "crates/interfaces/portals-sql",
    "crates/interfaces/portals-timezone",
    "crates/interfaces/portals-websocket",
    # Native backends
    "crates/backends/native/portals-blobstore-native",
    "crates/backends/native/portals-cache-native",
    "crates/backends/native/portals-clocks-native",
    "crates/backends/native/portals-config-native",
    "crates/backends/native/portals-crypto-native",
    "crates/backends/native/portals-dns-native",
    "crates/backends/native/portals-filesystem-native",
    "crates/backends/native/portals-http-native",
    "crates/backends/native/portals-io-native",
    "crates/backends/native/portals-keyvalue-native",
    "crates/backends/native/portals-logging-native",
    "crates/backends/native/portals-markdown-native",
    "crates/backends/native/portals-messaging-native",
    "crates/backends/native/portals-nanoid-native",
    "crates/backends/native/portals-observe-native",
    "crates/backends/native/portals-random-native",
    "crates/backends/native/portals-snowflake-native",
    "crates/backends/native/portals-sockets-native",
    "crates/backends/native/portals-sql-native",
    "crates/backends/native/portals-websocket-native",
    # Mock backends
    "crates/backends/mock/portals-clocks-mock",
    "crates/backends/mock/portals-http-mock",
    "crates/backends/mock/portals-random-mock",
    # WASM backends
    "crates/backends/wasm/portals-clocks-wasm",
    "crates/backends/wasm/portals-http-wasm",
    "crates/backends/wasm/portals-logging-wasm",
    "crates/backends/wasm/portals-random-wasm",
    "crates/backends/wasm/portals-websocket-wasm",
    # Portable backends (work on native and WASM)
    "crates/backends/portable/portals-cron",
    "crates/backends/portable/portals-encoding",
    # Protocols
    "crates/protocols/portals-http1",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rhizome-lab/pith"

[workspace.dependencies]
tokio = { version = "1", features = ["time", "rt", "macros", "net", "io-util", "rt-multi-thread"] }
getrandom = "0.3"
libsql = "0.6"
