[package]
name = "rhizome-pith-clocks-mock"
description = "Mock implementation of pith-clocks for testing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rhizome-rhi-portals-clocks = { path = "../../../interfaces/pith-clocks" }
