[package]
name = "portals-http-mock"
description = "Mock implementation of portals-http for testing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
portals-http = { path = "../../../interfaces/portals-http" }

[dev-dependencies]
tokio = { workspace = true }
