[package]
name = "rhizome-pith-random-mock"
description = "Mock implementation of pith-random for testing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rhizome-rhi-portals-random = { path = "../../../interfaces/pith-random" }
