[package]
name = "pith-blobstore-native"
description = "Native blob storage implementation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pith-blobstore = { path = "../../../interfaces/pith-blobstore" }
tokio.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
