[package]
name = "rhizome-pith-encoding-native"
description = "Native implementation of pith-encoding"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rhizome-pith-encoding = { path = "../../../interfaces/pith-encoding" }
base64 = "0.22"
