[package]
name = "pith-filesystem-native"
description = "Native implementation of pith-filesystem"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pith-filesystem = { path = "../../../interfaces/pith-filesystem" }
pith-io-native = { path = "../pith-io-native" }
