[package]
name = "rhizome-pith-filesystem-native"
description = "Native implementation of pith-filesystem"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rhizome-pith-filesystem = { path = "../../../interfaces/pith-filesystem" }
rhizome-pith-io-native = { path = "../pith-io-native" }
