[package]
name = "pith-http-native"
description = "Native implementation of pith-http"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pith-http = { path = "../../../interfaces/pith-http" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { workspace = true }
