[package]
name = "rhizome-pith-keyvalue-native"
description = "Native key-value store implementation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rhizome-pith-keyvalue = { path = "../../../interfaces/pith-keyvalue" }
tokio.workspace = true
