[package]
name = "rhizome-pith-logging-native"
description = "Native logging implementation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rhizome-pith-logging = { path = "../../../interfaces/pith-logging" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
