[package]
name = "pith-sockets-native"
description = "Native implementation of pith-sockets"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pith-sockets = { path = "../../../interfaces/pith-sockets" }
tokio = { workspace = true, features = ["net"] }
