[package]
name = "rhizome-pith-sql-native"
description = "Native implementation of pith-sql using libsql"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rhizome-pith-sql = { path = "../../../interfaces/pith-sql" }
libsql.workspace = true
tokio = { workspace = true }
