[package]
name = "pith-uuid-native"
description = "Native UUID implementation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pith-uuid = { path = "../../../interfaces/pith-uuid" }
uuid = { version = "1", features = ["v4", "v7"] }
