[package]
name = "portals-blobstore-native"
description = "Native blob storage implementation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
portals-blobstore = { path = "../../../interfaces/portals-blobstore" }
tokio.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
