[package]
name = "portals-clocks-native"
description = "Native implementation of portals-clocks"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["tokio"]
tokio = ["dep:tokio"]

[dependencies]
portals-clocks = { path = "../../../interfaces/portals-clocks" }
tokio = { workspace = true, optional = true }
