[package]
name = "rhizome-pith-dns-native"
description = "Native DNS implementation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rhizome-rhi-portals-dns = { path = "../../../interfaces/pith-dns" }
hickory-resolver = "0.25"
tokio.workspace = true
