[package]
name = "portals-filesystem-native"
description = "Native implementation of portals-filesystem"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
portals-filesystem = { path = "../../../interfaces/portals-filesystem" }
portals-io-native = { path = "../portals-io-native" }
