[package]
name = "portals-http-native"
description = "Native implementation of portals-http"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
portals-http = { path = "../../../interfaces/portals-http" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { workspace = true }
