[package]
name = "portals-markdown-native"
description = "Native Markdown implementation using pulldown-cmark"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
portals-markdown = { path = "../../../interfaces/portals-markdown" }
pulldown-cmark = "0.12"
