[package]
name = "rhizome-pith-messaging-native"
description = "Native message queue implementation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rhizome-rhi-portals-messaging = { path = "../../../interfaces/pith-messaging" }
tokio = { workspace = true, features = ["sync", "time"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
